manifests/kong-Ingress-controller/01-shop-kong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-kong
  labels:
    app.kubernetes.io/name: shop-kong
