manifests/kong-Ingress-controller/02-frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: shop-kong
  labels:
    app: frontend
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: blue
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      containers:
        - name: frontend
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=frontend-blue"
          ports:
            - containerPort: 8080
