manifests/kong-Ingress-controller/04-frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: shop-kong
  labels:
    app: frontend
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: green
  template:
    metadata:
      labels:
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=frontend-green"
          ports:
            - containerPort: 8080
