manifests/kong-Ingress-controller/06-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: shop-kong
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:8080"
            - "-text=orders-service"
          ports:
            - containerPort: 8080
