manifests/kong-Ingress-controller/03-frontend-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
  namespace: shop-kong
spec:
  selector:
    app: frontend
    version: blue
  ports:
    - port: 80
      targetPort: 8080
