manifests/kong-Ingress-controller/05-frontend-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-green
  namespace: shop-kong
spec:
  selector:
    app: frontend
    version: green
  ports:
    - port: 80
      targetPort: 8080
