manifests/kong-Ingress-controller/07-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: shop-kong
spec:
  selector:
    app: orders
  ports:
    - port: 8080
      targetPort: 8080
