manifests/kong-Ingress-controller/kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shop-gateway
  namespace: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: shop-kong.local
      allowedRoutes:
        namespaces:
          from: All
