manifests/kong-Ingress-controller/httproute-blue.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: shop
spec:
  parentRefs:
    - name: shop-gateway
      namespace: kong
  hostnames:
    - shop-kong.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-blue
          port: 80
          weight: 100
