manifests/kong-Ingress-controller/10-kong-ingress-gateway-to-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kong-to-frontend
  namespace: shop
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kong
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
